[package]
name = "ckb-sdk-types"
version = "0.26.0"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"

ckb-types = { git = "https://github.com/jjyr/ckb", rev = "0386399" }
ckb-script = { git = "https://github.com/jjyr/ckb", rev = "0386399", default-features = false }
ckb-jsonrpc-types = { git = "https://github.com/jjyr/ckb", rev = "0386399" }
ckb-hash = { git = "https://github.com/jjyr/ckb", rev = "0386399" }
ckb-error = { git = "https://github.com/jjyr/ckb", rev = "0386399" }

[dev-dependencies]
ckb-crypto = { git = "https://github.com/jjyr/ckb", rev = "0386399", features = ["secp"] }

[features]
default = ["ckb-script/default"]
asm = ["ckb-script/asm"]
detect-asm = ["ckb-script/detect-asm"]
logging = ["ckb-script/logging"]
