[package]
name = "ckb-sdk-types"
version = "0.37.0"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"

ckb-types = { version = "0.37.0" }
ckb-traits = { version = "0.37.0" }
ckb-jsonrpc-types = { version = "0.37.0" }
ckb-hash = { version = "0.37.0" }
ckb-error = { version = "0.37.0" }

[dev-dependencies]
ckb-crypto = { version = "0.37.0", features = ["secp"] }
